# INI_Editor

./: CMakeLists.txt  FileHandler.cpp  FileHandler.h  INI_Editor  INI_Editor.pro  Makefile  README.md  comment.h  entry.h  invalidrowexception.h  ioexception.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  parameter.h  section.h  ui_mainwindow.h
testEditTable/: TEST_FILE_edit.ini  testEditTable  testEditTable.pro  testedittable.cpp  testedittable.h
testInvalidRowException/: testInvalidRowException  testInvalidRowException.pro  testinvalidrowexception.cpp  testinvalidrowexception.h
testLoadFile/: TEST_FILE_input.ini  testLoadFile  testLoadFile.cpp  testLoadFile.pro  testloadfile.h
testSaveFile/: target_wrapper.sh  testSaveFile  testSaveFile.pro  testsavefile.cpp  testsavefile.h
